--- a/win32/README.NT
+++ b/win32/README.NT
@@ -285,51 +285,7 @@ using English versions, do not install the dlls)
 
 Virtual key code bindings:
 -------------------------
-To use keys like function keys, arrows, insert, etc., the following 
-form of bindkey must be used:
-
-bindkey -b N-xxx <command>
-
-where xxx is either:
-	a) A number from 1 through 24, representing the fucntion keys.
-	For example, bindkey -b N-1 run-help
-
-	b) The strings "pgup","pgdown","end","home", "left","up","right","down",
-	"ins","del"
-	For example, bindkey -b N-del delete-char
-
-Here are the bindings I use in my .tcshrc:
-
-# NT specific bindkey extensions
-	bindkey -b N-up up-history           
-	bindkey -b N-down down-history      
-	bindkey -b N-right forward-char    
-	bindkey -b N-left backward-char
-	bindkey -b N-del delete-char
-	bindkey -b N-ins overwrite-mode
-	bindkey -b N-1 which-command
-	bindkey -b N-2 expand-history
-	bindkey -b N-3 complete-word-raw
-	bindkey -b N-home beginning-of-line
-	bindkey -b N-end end-of-line
-
-	bindkey -b N-pgup e_page_up
-	bindkey -b N-pgdown e_page_down
-
-(Note that on Win9x, you must set your console window to NOT be Auto
-sized, and you must use the "settc" builtin to increase and then reduce
-back the number of lines, in order to get a scrollbar. pgup and
-pgdown will not work without a scroll bar)
-
-
-To bind ctrl or alt combinations, use the following as examples.
-
-	bindkey -b N-C-left backward-word
-	bindkey -b N-M-right forward-word    
-
-For Shift combinations:
-	bindkey -b N-S-1 backward-word
-
+Now the same as any xterm-256-color terminal
 
 e_dosify_next
 -------------
